Fixes incorrect holdings calculations. Updates percent field in pieCharts. Fixes bug where amount in holding can be < 0. Updates req schemas so pricePer is only required for buy and sell and pricePer, quantity, usdRate > 0. Adds support for recording transactions in different currency.
