# src/api/routes/portfolio/transactions/req-schemas.ts
@@ -8,6 +8,8 @@ export interface IAddPTransactionReqBody {
   pricePer: string;
   coinId: string;
   date: string;
+  currencyCode: string;
+  usdRate: string;
 }
 
 export interface IDeletePTransactionsQuery {
@@ -25,6 +27,8 @@ export interface IUpdatePTransactionReqBody {
   quantity?: string;
   pricePer?: string;
   date?: string;
+  currencyCode?: string;
+  usdRate?: string;
 }
 
 export const ADD_PORTFOLIO_TRANSACTION = {
@@ -34,23 +38,35 @@ export const ADD_PORTFOLIO_TRANSACTION = {
     })
   }),
   [Segments.BODY]: Joi.object().keys({
-    notes: Joi.string().allow("", null).default("").max(255).messages({
-      "string.max": "notes cannot be greater than 255 characters"
-    }),
     type: Joi.string().required().valid("buy", "sell", "transfer_in", "transfer_out").messages({
       "any.only": "type must be 'buy' | 'sell' | 'transfer_in' | 'transfer_out'"
     }),
-    quantity: Joi.number().required().messages({
-      "any.required": "quantity is required"
-    }),
-    pricePer: Joi.number().required().messages({
-      "any.required": "pricePer is required"
+    quantity: Joi.number().required().greater(0).messages({
+      "any.required": "quantity is required",
+      "number.greater": "quantity must be greater than 0"
     }),
     coinId: Joi.string().required().messages({
       "any.required": "coinId is required"
     }),
-    date: Joi.date().optional().iso().messages({
+    date: Joi.date().iso().messages({
       "date.format": "date must be in ISO format"
+    }),
+    notes: Joi.string().max(255).messages({
+      "string.max": "notes cannot be greater than 255 characters"
+    }),
+    currencyCode: Joi.string().default("USD").messages({}),
+    usdRate: Joi.number().greater(0).default(1).messages({
+      "number.greater": "usdRate must be greater than 0"
+    }),
+    pricePer: Joi.when("type", {
+      is: Joi.valid("buy", "sell"),
+      then: Joi.number().greater(0).required().messages({
+        "number.greater": "pricePer must be greater than 0",
+        "any.required": "pricePer is required when type is 'buy' or 'sell'"
+      }),
+      otherwise: Joi.forbidden().default(0).messages({
+        "any.unknown": "pricePer is not allowed when type is 'transfer_in' or 'transfer_out'"
+      })
     })
   })
 };
@@ -90,20 +106,24 @@ export const UPDATE_TRANSACTION_BY_ID = {
     })
   }),
   [Segments.BODY]: Joi.object().keys({
-    notes: Joi.string().allow("", null).default("").max(255).messages({
+    notes: Joi.string().max(255).messages({
       "string.max": "notes cannot be greater than 255 characters"
     }),
     type: Joi.string().valid("buy", "sell", "transfer_in", "transfer_out").messages({
       "any.only": "type must be 'buy' | 'sell' | 'transfer_in' | 'transfer_out'"
     }),
-    quantity: Joi.number().messages({
-      "any.required": "quantity is required"
+    quantity: Joi.number().greater(0).messages({
+      "number.greater": "quantity must be greater than 0"
     }),
-    pricePer: Joi.number().messages({
-      "any.required": "pricePer is required"
+    pricePer: Joi.number().greater(0).messages({
+      "number.greater": "pricePer must be greater than 0"
     }),
-    date: Joi.date().optional().iso().messages({
+    date: Joi.date().iso().messages({
       "date.format": "date must be in ISO format"
+    }),
+    currencyCode: Joi.string(),
+    usdRate: Joi.number().greater(0).messages({
+      "number.greater": "usdRate must be greater than 0"
     })
   })
 };
