# src/config/swagger.json
@@ -37,9 +37,7 @@
   "paths": {
     "/auth/user": {
       "get": {
-        "tags": [
-          "user"
-        ],
+        "tags": ["user"],
         "summary": "Retrieves a user from token",
         "security": [
           {
@@ -82,9 +80,7 @@
     },
     "/auth/register": {
       "post": {
-        "tags": [
-          "user"
-        ],
+        "tags": ["user"],
         "summary": "Creates a new user",
         "requestBody": {
           "content": {
@@ -102,11 +98,7 @@
                     "type": "string"
                   }
                 },
-                "required": [
-                  "email",
-                  "password",
-                  "name"
-                ]
+                "required": ["email", "password", "name"]
               }
             }
           }
@@ -142,9 +134,7 @@
     },
     "/auth/login": {
       "post": {
-        "tags": [
-          "user"
-        ],
+        "tags": ["user"],
         "summary": "Login using email and password",
         "responses": {
           "200": {
@@ -191,10 +181,7 @@
                     "type": "string"
                   }
                 },
-                "required": [
-                  "email",
-                  "password"
-                ]
+                "required": ["email", "password"]
               }
             }
           }
@@ -203,9 +190,7 @@
     },
     "/events": {
       "get": {
-        "tags": [
-          "events"
-        ],
+        "tags": ["events"],
         "summary": "Retrieves a list of crypto events",
         "parameters": [
           {
@@ -251,11 +236,7 @@
             "description": "filter events",
             "schema": {
               "type": "string",
-              "enum": [
-                "hot_events",
-                "trending_events",
-                "significant_events"
-              ]
+              "enum": ["hot_events", "trending_events", "significant_events"]
             }
           },
           {
@@ -273,11 +254,7 @@
             "description": "sort events by one the following",
             "schema": {
               "type": "string",
-              "enum": [
-                "hot_events",
-                "trending_events",
-                "significant_events"
-              ]
+              "enum": ["hot_events", "trending_events", "significant_events"]
             }
           }
         ],
@@ -307,9 +284,7 @@
     },
     "/news": {
       "get": {
-        "tags": [
-          "news"
-        ],
+        "tags": ["news"],
         "summary": "Retrieves a list of crypto news",
         "parameters": [
           {
@@ -318,13 +293,7 @@
             "description": "filter news",
             "schema": {
               "type": "string",
-              "enum": [
-                "rising",
-                "hot",
-                "bullish",
-                "bearish",
-                "important"
-              ]
+              "enum": ["rising", "hot", "bullish", "bearish", "important"]
             }
           },
           {
@@ -342,11 +311,7 @@
             "description": "filter news by type",
             "schema": {
               "type": "string",
-              "enum": [
-                "news",
-                "media",
-                "significant_events"
-              ]
+              "enum": ["news", "media", "significant_events"]
             }
           },
           {
@@ -386,9 +351,7 @@
     },
     "/markets": {
       "get": {
-        "tags": [
-          "markets"
-        ],
+        "tags": ["markets"],
         "summary": "Retrieves cryptos",
         "parameters": [
           {
@@ -397,14 +360,7 @@
             "description": "sort cryptos",
             "schema": {
               "type": "string",
-              "enum": [
-                "rank",
-                "name",
-                "priceUsd",
-                "marketCapUsd",
-                "volumeUsd24Hr",
-                "changePercent24Hr"
-              ]
+              "enum": ["rank", "name", "priceUsd", "marketCapUsd", "volumeUsd24Hr", "changePercent24Hr"]
             },
             "required": true
           },
@@ -414,10 +370,7 @@
             "description": "order to sort cryptos by",
             "schema": {
               "type": "string",
-              "enum": [
-                "ASC",
-                "DESC"
-              ]
+              "enum": ["ASC", "DESC"]
             },
             "required": true
           },
@@ -471,9 +424,7 @@
     },
     "/markets/summary": {
       "get": {
-        "tags": [
-          "markets"
-        ],
+        "tags": ["markets"],
         "summary": "Retrieves global market summary",
         "responses": {
           "200": {
@@ -501,9 +452,7 @@
     },
     "/markets/top-coins": {
       "get": {
-        "tags": [
-          "markets"
-        ],
+        "tags": ["markets"],
         "summary": "Retrieves cryptos sorted by highest market cap",
         "parameters": [
           {
@@ -544,9 +493,7 @@
     },
     "/markets/gainers-losers": {
       "get": {
-        "tags": [
-          "markets"
-        ],
+        "tags": ["markets"],
         "summary": "Retrieves cryptos with the highest price increase & decrease",
         "parameters": [
           {
@@ -587,9 +534,7 @@
     },
     "/markets/search": {
       "get": {
-        "tags": [
-          "markets"
-        ],
+        "tags": ["markets"],
         "summary": "Retrieves cryptos by keyword(s)",
         "parameters": [
           {
@@ -628,9 +573,7 @@
     },
     "/markets/{id}/about": {
       "get": {
-        "tags": [
-          "markets"
-        ],
+        "tags": ["markets"],
         "summary": "Retrieves details about an asset such as description",
         "parameters": [
           {
@@ -669,9 +612,7 @@
     },
     "/markets/{id}/overview": {
       "get": {
-        "tags": [
-          "markets"
-        ],
+        "tags": ["markets"],
         "summary": "Retrieves overview of an asset such as price history and statistics",
         "parameters": [
           {
@@ -710,9 +651,7 @@
     },
     "/markets/{id}/exchanges": {
       "get": {
-        "tags": [
-          "markets"
-        ],
+        "tags": ["markets"],
         "summary": "Retrieves exchanges an asset can be traded on",
         "parameters": [
           {
@@ -774,9 +713,7 @@
     },
     "/portfolios": {
       "get": {
-        "tags": [
-          "portfolio"
-        ],
+        "tags": ["portfolio"],
         "summary": "Retrieves a list of portfolios",
         "security": [
           {
@@ -807,9 +744,7 @@
         }
       },
       "post": {
-        "tags": [
-          "portfolio"
-        ],
+        "tags": ["portfolio"],
         "summary": "Creates a portfolio",
         "security": [
           {
@@ -826,9 +761,7 @@
                     "type": "string"
                   }
                 },
-                "required": [
-                  "nickname"
-                ]
+                "required": ["nickname"]
               }
             }
           }
@@ -869,9 +802,7 @@
     },
     "/portfolios/{id}": {
       "get": {
-        "tags": [
-          "portfolio"
-        ],
+        "tags": ["portfolio"],
         "summary": "Retrieves portfolio by id",
         "security": [
           {
@@ -923,9 +854,7 @@
         }
       },
       "patch": {
-        "tags": [
-          "portfolio"
-        ],
+        "tags": ["portfolio"],
         "summary": "Updates a portfolio with id",
         "security": [
           {
@@ -991,9 +920,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "portfolio"
-        ],
+        "tags": ["portfolio"],
         "summary": "Deletes a portfolio with id",
         "security": [
           {
@@ -1047,9 +974,7 @@
     },
     "/portfolios/{id}/overview": {
       "get": {
-        "tags": [
-          "portfolio"
-        ],
+        "tags": ["portfolio"],
         "summary": "Retrieves overview of a portfolio",
         "security": [
           {
@@ -1103,9 +1028,7 @@
     },
     "/portfolios/supported-coins": {
       "get": {
-        "tags": [
-          "portfolio"
-        ],
+        "tags": ["portfolio"],
         "summary": "Retrieves coins that can be tracked",
         "security": [
           {
@@ -1158,9 +1081,7 @@
     },
     "/portfolios/{id}/holdings/{coinId}/overview": {
       "get": {
-        "tags": [
-          "portfolio"
-        ],
+        "tags": ["portfolio"],
         "summary": "Overview of a holding in a portfolio",
         "security": [
           {
@@ -1223,9 +1144,7 @@
     },
     "/portfolios/{portfolioId}/transactions": {
       "get": {
-        "tags": [
-          "portfolio transaction"
-        ],
+        "tags": ["portfolio transaction"],
         "summary": "Retrieves transactions for a portfolio",
         "security": [
           {
@@ -1287,9 +1206,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "portfolio transaction"
-        ],
+        "tags": ["portfolio transaction"],
         "summary": "Deletes transactions in a portfolio",
         "security": [
           {
@@ -1343,9 +1260,7 @@
         }
       },
       "post": {
-        "tags": [
-          "portfolio transaction"
-        ],
+        "tags": ["portfolio transaction"],
         "summary": "Add a transaction to a portfolio",
         "security": [
           {
@@ -1384,14 +1299,19 @@
                   },
                   "coinId": {
                     "type": "string"
+                  },
+                  "date": {
+                    "type": "string",
+                    "format": "date"
+                  },
+                  "currencyCode": {
+                    "type": "string"
+                  },
+                  "usdRate": {
+                    "type": "string"
                   }
                 },
-                "required": [
-                  "coinId",
-                  "pricePer",
-                  "type",
-                  "quantity"
-                ]
+                "required": ["coinId", "type", "quantity"]
               }
             }
           }
@@ -1432,9 +1352,7 @@
     },
     "/portfolios/{portfolioId}/transactions/{id}": {
       "get": {
-        "tags": [
-          "portfolio transaction"
-        ],
+        "tags": ["portfolio transaction"],
         "summary": "Retrieves transaction with id",
         "security": [
           {
@@ -1495,9 +1413,7 @@
         }
       },
       "delete": {
-        "tags": [
-          "portfolio transaction"
-        ],
+        "tags": ["portfolio transaction"],
         "summary": "Deletes transaction with id",
         "security": [
           {
@@ -1558,9 +1474,7 @@
         }
       },
       "patch": {
-        "tags": [
-          "portfolio transaction"
-        ],
+        "tags": ["portfolio transaction"],
         "summary": "Updates transaction with id",
         "security": [
           {
@@ -1605,6 +1519,16 @@
                   },
                   "pricePer": {
                     "type": "string"
+                  },
+                  "date": {
+                    "type": "string",
+                    "format": "date"
+                  },
+                  "currencyCode": {
+                    "type": "string"
+                  },
+                  "usdRate": {
+                    "type": "string"
                   }
                 }
               }
@@ -1647,9 +1571,7 @@
     },
     "/currencies": {
       "get": {
-        "tags": [
-          "currencies"
-        ],
+        "tags": ["currencies"],
         "summary": "Retrieves a list of currencies",
         "parameters": [
           {
@@ -1697,9 +1619,7 @@
     },
     "/currencies/{currencyCode}": {
       "get": {
-        "tags": [
-          "currencies"
-        ],
+        "tags": ["currencies"],
         "summary": "Retrieves a currency with its rate",
         "parameters": [
           {
@@ -2277,24 +2197,26 @@
             "type": "string"
           },
           "date": {
-            "type": "string"
+            "type": "string",
+            "format": "date"
           },
-          "pricePerUSD": {
+          "pricePer": {
             "type": "string"
           },
           "coinId": {
+            "type": "string"
+          },
+          "currencyCode": {
+            "type": "string"
+          },
+          "usdRate": {
             "type": "string"
           }
         }
       },
       "PTransactionType": {
         "type": "string",
-        "enum": [
-          "buy",
-          "sell",
-          "transfer_in",
-          "transfer_out"
-        ]
+        "enum": ["buy", "sell", "transfer_in", "transfer_out"]
       },
       "Currencies": {
         "type": "object",
